# FeOS

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  REUSE.toml  build.rs
.github/: release-drafter.yml
.github/workflows/: clippy.yaml  lint.yaml  nginx-container.yaml  release-drafter.yml  release-oci.yaml  release.yaml  test.yaml
cli/: Cargo.toml
cli/src/: container_commands.rs  host_commands.rs  image_commands.rs  main.rs  vm_commands.rs
cli/src/host_commands/: kernel_stats.rs
client/: Cargo.toml  build.rs
client/src/: client.rs  client_isolated_container.rs  main.rs
docs/: development.md  nested_virt_test_env.md  release.md
docs/blog/: 2024-06-05_-_vfs-cloud-hypervisor.md  index.md
docs/boot-image/: uki.md
docs/changelog/: FeOS-0.1.0.md  FeOS-0.1.1.md  FeOS-0.5.0.md
feos/: Cargo.toml
feos/proto/: Cargo.toml  build.rs
feos/proto/src/: lib.rs
feos/services/container-service/: Cargo.toml  build.rs
feos/services/container-service/migrations/: 20251016100000_create_containers_table.sql
feos/services/container-service/src/: api.rs  dispatcher.rs  error.rs  lib.rs  worker.rs
feos/services/container-service/src/persistence/: mod.rs  repository.rs
feos/services/container-service/src/runtime/: adapter.rs  mod.rs
feos/services/host-service/: Cargo.toml
feos/services/host-service/src/: api.rs  dispatcher.rs  error.rs  lib.rs  worker.rs
feos/services/host-service/src/worker/: info.rs  kernel_stats.rs  mod.rs  ops.rs  power.rs  time.rs
feos/services/image-service/: Cargo.toml
feos/services/image-service/src/: api.rs  dispatcher.rs  error.rs  filestore.rs  lib.rs  worker.rs
feos/services/task-service/: Cargo.toml
feos/services/task-service/src/: api.rs  dispatcher.rs  error.rs  lib.rs  worker.rs
feos/services/vm-service/: Cargo.toml  build.rs
feos/services/vm-service/.sqlx/: query-634d547d9ae7228d964e052292fe89d00c0b3d4f1e9f536e597652ce32a8e515.json  query-87733e46a88697f25589451e9a1fd11cbb450a9a6b875c0c6fa01bf349a085cd.json
feos/services/vm-service/src/: api.rs  dispatcher.rs  dispatcher_handlers.rs  error.rs  lib.rs  vmservice_helper.rs  worker.rs
feos/services/vm-service/src/persistence/: mod.rs  repository.rs
feos/services/vm-service/src/vmm/: ch_adapter.rs  mod.rs
feos/src/: lib.rs  main.rs  setup.rs
feos/src/utils/: mod.rs
feos/src/utils/filesystem/: move.rs
feos/src/utils/host/: info.rs
feos/src/utils/network/: mod.rs  utils.rs
feos/tests/: integration_tests.rs
feos/tests/integration/: container_tests.rs  fixtures.rs  host_tests.rs  image_tests.rs  mod.rs  vm_tests.rs
feos/utils/: Cargo.toml  build.rs
feos/utils/src/: lib.rs  version.rs
feos/utils/src/feos_logger/: mod.rs
feos/utils/src/filesystem/: fsmount.rs  mod.rs  mount.rs  move.rs
feos/utils/src/host/: info.rs  memory.rs  mod.rs  power.rs
feos/utils/src/network/: dhcpv6.rs  mod.rs  utils.rs
filesystem/: Cargo.toml
filesystem/src/: fsmount.rs  lib.rs  mount.rs  move.rs
go/feos-go/: Makefile  go.mod
go/feos-go/hack/: generate-proto.sh  get_version.sh
hack/: Dockerfile.nginx  README.md  hack.mk
hack/build-container/: Dockerfile  README.md  make.mk  mk-build-container
hack/cloud-hypervisor/: make.mk  version
hack/cloud-hypervisor-firmware/: make.mk
hack/initramfs/: make.mk  mk-initramfs  utils.sh
hack/kernel/: cmdline.txt  config.sh  make.mk  mk-kernel  mk-menuconfig  mk-oldconfig
hack/kernel/config/: feos-linux-6.1.62.config  feos-linux-6.12.21.config  feos-linux-6.12.63.config  feos-linux-6.6.1.config  feos-linux-6.6.11.config  feos-linux-6.6.17.config  feos-linux-6.6.18.config  feos-linux-6.6.43.config  feos-linux-6.6.6.config  feos-linux-6.6.60.config
hack/libvirt/: init.sh  libvirt-kvm.xml
hack/uki/: build-uki.sh  cmdline.txt  make.mk  os-release.txt
hack/youki/: make.mk
host/: Cargo.toml
host/src/: info.rs  lib.rs  power.rs
network/: Cargo.toml
network/src/: dhcpv6.rs  lib.rs  utils.rs
proto/: container.proto  feos.proto  isolated_container.proto
proto-definitions/: Cargo.toml  build.rs
proto-definitions/src/: lib.rs
proto/v1/: container.proto  host.proto  image.proto  task.proto  vm.proto
services/host-service/: Cargo.toml
services/host-service/src/: api.rs  dispatcher.rs  lib.rs  worker.rs
services/image-service/: Cargo.toml
services/image-service/src/: api.rs  dispatcher.rs  filestore.rs  lib.rs  worker.rs
services/vm-service/: Cargo.toml  build.rs
services/vm-service/.sqlx/: query-135f3d50360087853fec6ae0342409a98f4a52d8862124a8b7f698c814325157.json  query-370675f1c72e8dd9d6cfbd3aa2a0813dba1f31bc9b727972523fd17f9607dbbc.json
services/vm-service/migrations/: 20250713175451_create_vms_table.sql
services/vm-service/src/: api.rs  dispatcher.rs  lib.rs  vmservice_helper.rs  worker.rs
services/vm-service/src/persistence/: mod.rs  repository.rs
services/vm-service/src/vmm/: ch_adapter.rs  mod.rs
src/: daemon.rs  dhcpv6.rs  filesystem.rs  lib.rs  main.rs  move_root.rs  network.rs  ringbuffer.rs
src/container/: mod.rs  oci.rs
src/host/: info.rs  mod.rs
src/isolated_container/: mod.rs
src/network/: dhcpv6.rs  mod.rs  radv.rs  utils.rs
src/vm/: config.rs  image.rs  mod.rs  vm_config.rs
