[package]
name = "feos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feos-cli"
path = "src/bin/feos_cli/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"

[dependencies]
futures = "0.3.31"
netlink-packet-route = "~0.19.0"
rtnetlink = "0.14.1"
nix = { version = "0.29.0", features = ["mount", "user", "reboot", "feature", "net", "aio", "signal", "process", "fs"] }
tokio = { version = "1.41.1", features = ["full", "macros", "rt-multi-thread"] }
log = "0.4.22"
simple_logger = "5.0.0"
tonic = "0.12.3"
prost = "0.13.3"
bitflags = "2.6.0"
uuid = { version = "1.11.0", features = ["v4"] }
oci-distribution = "0.11.0"
serde = "1.0.214"
serde_json = "1.0.132"
api_client = {tag = "v41.0",  git = "https://github.com/cloud-hypervisor/cloud-hypervisor"  }
net_util = {tag = "v41.0",  git = "https://github.com/cloud-hypervisor/cloud-hypervisor"  }
vmm = { tag = "v41.0",  git = "https://github.com/cloud-hypervisor/cloud-hypervisor", features = ["kvm"] }
openssl = { version = "0.10.68", features = ["vendored"] }
libcgroups = { version = "0.4.1", default-features = false, features = ["v2",] }
libcontainer = { version = "0.4.1", default-features = false, features = [ "v2",] }
dhcproto = "0.12.0"
rand = "0.8.5"
pnet = "0.35.0"
thiserror = "2"
anyhow = "1.0.93"
tar = "0.4"
flate2 = "1.0"
tokio-stream = "0.1.15"
chrono = "0.4"
futures-util = "0.3"
futures-core = "0.3"
async-stream = "0.3"
tokio-vsock = { git = "https://github.com/rust-vsock/tokio-vsock", rev = "3a41323", features = ["tonic-conn"]}
tower = "0.5"
hyper-util = "0.1"
socket2 = "0.5.7"
libc = "0.2"

pelite = "0.10"
regex = "1.10"
structopt = "0.3.26"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
serial_test = "3.2"
