[workspace]
members = [
    "feos",
    "feos/services/vm-service",
    "feos/services/host-service",
    "feos/services/image-service",
    "cli",
    "feos/proto",
    "feos/utils",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
anyhow = "1.0.80"
nix = { version = "0.29.0", features = ["mount", "user", "reboot", "feature", "net", "aio", "signal", "process", "fs", "hostname"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.7.0", features = ["v4"] }
tonic-build = "0.11.0"
log = "0.4"
env_logger = "0.11"
openssl = { version = "0.10.72", features = ["vendored"] }
oci-distribution = "0.11.0"
tempfile = "3.10.1"
tower = { version = "0.4", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
digest = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = { version = "0.15"}
libc = "0.2"
rtnetlink = "0.14.1"
netlink-packet-route = "~0.19.0"
pnet = "0.35.0"
dhcproto = "0.12.0"
socket2 = "0.5.7"
futures = "0.3.31"
chrono = "0.4"
feos-proto = { path = "feos/proto" }