[workspace]
members = [
    "feos",
    "feos/services/vm-service",
    "feos/services/host-service",
    "feos/services/image-service",
    "cli",
    "feos/proto",
    "feos/utils",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.13.0"
prost = "0.13.5"
prost-types = "0.13.5"
anyhow = "1.0.100"
nix = { version = "0.30.1", features = ["mount", "user", "reboot", "feature", "net", "aio", "signal", "process", "fs", "hostname"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.18.1", features = ["v4"] }
tonic-build = "0.13.0"
log = "0.4.28"
env_logger = "0.11"
openssl = { version = "0.10.72", features = ["vendored"] }
oci-distribution = "0.11.0"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
digest = "0.10"
clap = { version = "4.5.48", features = ["derive", "env"] }
dotenvy = { version = "0.15"}
libc = "0.2"
rtnetlink = "0.18.1"
netlink-packet-route = "~0.25.0"
pnet = "0.35.0"
dhcproto = "0.13.0"
socket2 = "0.6.0"
futures = "0.3.31"
chrono = "0.4.42"
thiserror = "2.0.16"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["full"] }
termcolor = "1.1"
once_cell = "1.19"
feos-proto = { path = "feos/proto" }