[package]
name = "feos-cli"
version = "0.2.0"
edition = "2021"
description = "A gRPC CLI for the FeOS control plane"

[dependencies]
proto-definitions = { path = "../proto-definitions" }
sha2 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# CLI specific dependencies
env_logger = { workspace = true }
crossterm = "0.27"