[package]
name = "feos-cli"
version.workspace = true
edition.workspace = true
description = "A gRPC CLI for the FeOS control plane"

[dependencies]
feos-proto = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# CLI specific dependencies
env_logger = { workspace = true }
crossterm = "0.27"
chrono = { workspace = true }