[package]
name = "feos-cli"
version.workspace = true
edition.workspace = true
description = "A gRPC CLI for the FeOS control plane"

[dependencies]
# Workspace dependencies
feos-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true }
hyper-util = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }
chrono = { workspace = true }

# CLI specific dependencies
crossterm = "0.29"