[package]
name = "feos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feos"
path = "src/main.rs"

[lib]
name = "main_server"
path = "src/lib.rs"

[dependencies]
feos-utils = { path = "utils" }
vm-service = { path = "services/vm-service" }
host-service = { path = "services/host-service" }
image-service = { path = "services/image-service" }
feos-proto = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
nix = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
libc = { workspace = true }
rtnetlink = { workspace = true }
netlink-packet-route = { workspace = true }
pnet = { workspace = true }
dhcproto = { workspace = true }
socket2 = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
termcolor = "1.1"

[dev-dependencies]
feos-utils = { path = "utils" }
vm-service = { path = "services/vm-service" }
image-service = { path = "services/image-service"}
host-service = { path = "services/host-service"}
anyhow = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
hyper-util = { workspace = true }
once_cell = "1.19"
regex = "1.10"
tower = { workspace = true }
tempfile = "3.10.1"