[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
rtnetlink = { workspace = true }
netlink-packet-route = { workspace = true }
pnet = { workspace = true }
futures = { workspace = true }
dhcproto = { workspace = true }
nix = { workspace = true, features = ["net"] }
socket2 = { workspace = true }