[package]
name = "feos-utils"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
termcolor = { workspace = true }
dhcproto = { workspace = true }
futures = { workspace = true }
netlink-packet-route = { workspace = true }
pnet = { workspace = true }
rtnetlink = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }