[package]
name = "host-service"
version = "0.2.0"
edition = "2021"

[dependencies]
proto-definitions = { path = "../../proto-definitions" }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }


# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true , features = ["hostname"] }
log = { workspace = true }