[package]
name = "host-service"
version = "0.2.0"
edition = "2021"

[dependencies]
feos-utils = { path = "../../utils" }
feos-proto = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true , features = ["hostname", "reboot"] }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }