[package]
name = "host-service"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
feos-utils = { path = "../../utils" }
feos-proto = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true , features = ["hostname", "reboot"] }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
hyper = {workspace = true}
hyper-util = { workspace = true }
sntpc = { version = "0.7", features = ["tokio-socket", "utils"] }
chrono = { workspace = true }
libc = { workspace = true }

hyper-rustls = "0.27.2"
http-body-util = "0.1.2"
rustls-pki-types = "1.0"