[package]
name = "image-service"
version = "0.2.0"
edition = "2021"

[dependencies]
feos-proto = { workspace = true }
oci-distribution = { workspace = true }
tempfile = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }