[package]
name = "image-service"
version.workspace = true
edition.workspace = true

[dependencies]
feos-proto = { workspace = true }
oci-distribution = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }